feat: expanded on heterogenous

--- a/Kristelle/final_report.bib
+++ b/Kristelle/final_report.bib
@@ -644,3 +644,22 @@
 	pages = {58--70},
 	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\YTBVYQFD\\Qin et al. - 2020 - SIGMA A Sparse and Irregular GEMM Accelerator with Flexible Interconnects for DNN Training.pdf:application/pdf},
 }
+
+@inproceedings{cain_convolution_2021,
+	address = {New Orleans, LA, USA},
+	title = {Convolution {Processing} {Unit} {Featuring} {Adaptive} {Precision} using {Dynamic} {Reconfiguration}},
+	copyright = {https://ieeexplore.ieee.org/Xplorehelp/downloads/license-information/IEEE.html},
+	isbn = {978-1-6654-4431-6},
+	url = {https://ieeexplore.ieee.org/document/9595539/},
+	doi = {10.1109/WF-IoT51360.2021.9595539},
+	abstract = {As the demand of low latency machine learning IoT devices has rapidly expanded in the past decade for commercial and industrial applications, cloud computing models have relied on high-speed connectivity which many devices do not have access to. Cloud based solutions are also becoming less attractive for inference solutions with arising privacy and security concerns. Transitioning computation towards edge devices is becoming essential and ﬁnding ways to make such computer vision workloads operational on constrained IPs is a key element in this work. As edge devices are limited in processing resources, relying on reconﬁgurable hardware such as FPGAs will oﬀer an embedded platform to dynamically shape the IPs and cores as needed for each speciﬁc application working on it. Convolutional Neural Networks and alike computer vision techniques rely heavily on computation and matrix based operations, this paper proposes a dedicated convolution processing element. The proposed a convolution processing element is implemented on a Pynq-Z2 FPGA that supports Dynamic Partial Reconﬁguration between integer point convolution operations of 8, 16, and 32 bit precision. The use of Dynamic Partial Reconﬁguration at a processing element level enables the design to be reconﬁgured 800× more quickly than traditional methods while minimally increasing system overhead.},
+	language = {en},
+	urldate = {2025-10-17},
+	booktitle = {2021 {IEEE} 7th {World} {Forum} on {Internet} of {Things} ({WF}-{IoT})},
+	publisher = {IEEE},
+	author = {Cain, David and Eldash, Omar and Khalil, Kasem and Bayoumi, Magdy},
+	month = jun,
+	year = {2021},
+	pages = {592--597},
+	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\FXFQI49E\\Cain et al. - 2021 - Convolution Processing Unit Featuring Adaptive Precision using Dynamic Reconfiguration.pdf:application/pdf},
+}
